[package]
name = "i2c-reg-derive"
version = "0.1.2"
authors = ["Łukasz Wolańczyk <wolanczyk.lukasz@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "Macros for i2c-reg register traits"
repository = "https://github.com/lukwol/i2c-reg"
documentation = "https://docs.rs/i2c-reg-derive"

[dependencies]
syn = "0.15.30"
quote = "0.6.11"

[lib]
proc-macro = true
